ecmascript/parser/tests/test262-error-references/fail/976b6247ca78ab51.js.stderr
error: Rest element must be final element
 --> $DIR/tests/test262-parser/fail/976b6247ca78ab51.js:1:2
  |
1 | [...{a=0},]=0
  |  ^^^^^^^^

